--- a/table.html
+++ b/table.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 <script src="https://kit.fontawesome.com/5b2ed7c1e8.js" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="./css/styles.css">
+<link rel="stylesheet" href="C:\Users\MissN\Documents\GitHub\assignment-one-portfolio-Nyisha\evidence\css\style.css">
 <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed&display=swap" rel="stylesheet">
   <title>Exchange Currency</title>
   <h1>Exchange Currency</h1>
