--- a/index.html/index.html
+++ b/index.html/index.html
@@ -11,7 +11,6 @@
 <script src="https://kit.fontawesome.com/5b2ed7c1e8.js" crossorigin="anonymous"></script>
 </head>
   <body>
-
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
       <a class="navbar-brand" href="index.html">Nyisha's News A.T.W</a>
@@ -40,32 +39,32 @@
     </nav>
 
 <div class="container">
-  <h1>Welcome to Nyisha's News A.T.W</h1>
+  <h1 style= "color:#ff0000;.">Welcome to Nyisha's News A.T.W</h1>
 
-      <p>This is an awesome new website with news from around the world.</p>
+      <p style="color:#ff0000;.">This is an awesome new website with news from around the world.</p>
 </div>
 <div class="container">
-  <div class="row">
-    <div class="col-lg-4">
+  <div class="row text-center mt-5">
+  <div class="col-lg-4">
       <img class="rounded-circle mb-3" src='images/sports.jpg' width="140" height="140">
 
 <h2>Sport News</h2>
 
-<p>Some text here</p>
+<p>England takes on top- ranked Belgium in the UEFA Nations League.</p>
   </div>
   <div class="col-lg-4">
     <img class="rounded-circle mb-3" src="images/education.jpg" width="140" height="140">
 
-<h2>Sport News</h2>
+<h2>Education News</h2>
 
-<p>Some text here</p>
+<p>New information about how the Goverment allows schools to move forward concernig GCSE's due to covid19.</p>
   </div>
   <div class="col-lg-4">
     <img class="rounded-circle mb-3" src="images/gaming.jpg" width="140" height="140">
 
-<h2>Sport News</h2>
+<h2>Gaming News</h2>
 
-<p>Some text here</p>
+<p>Release date for the new PS5 pluse hear about all the aditional features added.</p>
   </div>
   </div>
 </div>
