--- a/index.html/index.html
+++ b/index.html/index.html
@@ -7,7 +7,7 @@
 <title>Welcome to Nyisha's New's A.T.W</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="./css/styles.css" />
+<link rel="stylesheet" href="style.css">
 <script src="https://kit.fontawesome.com/5b2ed7c1e8.js" crossorigin="anonymous"></script>
 </head>
   <body>
@@ -18,9 +18,9 @@
       <button class="navbar-toggler" type="button" data-toggle="collaspe" data-target="#navbarSupportedContent">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedcontent">
 
-        <ul class="navbar-nav mr-auto">
+      <div class="collapse navbar-collapse" id="navbarSupportedcontent">
+  <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <a class="nav-link" href="index.html"><i class="fas fa-home"></i>Home</a>
       </li>
@@ -35,13 +35,21 @@
       </li>
       </ul>
     </div>
-      </div>
     </nav>
 
-<div class="container">
-  <h1 style= "color:#ff0000;.">Welcome to Nyisha's News A.T.W</h1>
+<div class="jumbortron" id="home-page">
+  <div class="container">
 
-      <p style="color:#ff0000;.">This is an awesome new website with news from around the world.</p>
+    <h1 class="display-4">Nyisha's News A.T.W</h1>
+    <p class="lead">
+      This website is your one stop source to national sports, education and gaming news,
+    </p>
+    <hr class="my-4"/>
+    <p>Why not begin by looking at some sports news...</p>
+    <a class="btn btn-primary btn-lg" href="sport.html"
+    role="button">Read sports news</a>
+
+  </div>
 </div>
 <div class="container">
   <div class="row text-center mt-5">
@@ -68,10 +76,28 @@
   </div>
   </div>
 </div>
-
+<form>
+  <div class="col-lg-4">
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1">
+  </div>
+  <div class="form-group form-check">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">I agree to the terms and conditions.</label>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</div>
+</form>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js">
 </script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js">
 </script>
+
 </body>
 </html>
